--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,7 +34,8 @@ jobs:
         ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
 
     # <insert integration tests needing secrets>
-
+    - run: |
+	echo ${{ secrets.HELLO }}
     - run: |
         echo "Integration tests... success! ;-)"
 
